--- a/CV.html
+++ b/CV.html
@@ -21,7 +21,7 @@
                 </td>
                 <td align="right">
                     <!-- Calls swap() function in CV.js to swap photo with another on click -->
-                    <img src="Photo1.png" id="picture" onclick="swap();" />
+                    <img src="Photo1.jpg" id="picture" onclick="swap();" />
                 </td>
             </tr>
             <tr>
@@ -90,25 +90,25 @@
 
 <h2>Projects</h2>	
 	<a href ="https://github.com/safat661/LibraryManagementSystem">	
-	Library Management (September 2015 - December 2015)</a>
+	Library Management</a> (September 2015 - December 2015)
 	<ul>
 		<li>An individual project for Computer Science course, in C programming, where we had to make a program about managing system for a school library</li>
 		<li>This was to make library management more simplistic since the management was mostly done manually</li>
 		<li>The program was specifically made to keep track of the book being borrowed by students, add and delete books from the library, and to search books from the collection</li>
-	</ul><a href=https://github.com/safat661/AutomaticTellerMachine">
-	Bank ATM System (May 2016 - August 2016)</a>
+	</ul><a href="https://github.com/safat661/AutomaticTellerMachine">
+	Bank ATM System</a> (May 2016 - August 2016)
 	<ul>
 		<li>An individual project in Computer Science course, in Java programming, where I created a program in eclipse IDE about an ATM machine system</li>
 		<li>This was about what generally an ATM machine can do. Adding money to cardholder’s balance or withdrawing money from the machine or maybe just checking the account balance</li>
 		<li>Extensive use of object oriented program, JAVA.</li>
 	</ul><a href ="https://github.com/safat661/StudyUnion">
-	Study Planning Application for Students (Summer 2017(in progress))</a>
+	Study Planning Application for Students</a> (Summer 2017(in progress))
 	<ul>
 		<li>An application in Java, using the android studio as a programming environment</li>
 		<li>Design and developed an application where students can discuss course materials with other students in the class, ask questions about the course topic, show degree progress report, alert students about upcoming exams, assignment submission deadline and a to-do list</li>
 		<li>Integrated firebase for Cloud Messaging</li>
 	</ul><a href="https://github.com/safat661/PuzzleAlarmClock">
-	Puzzle Alarm Clock (Fall 2017 (in progress))</a>
+	Puzzle Alarm Clock</a> (Fall 2017 (in progress))
 	<ul>	
 		<li>An individual project developed in Java, using the android studio as a programming environment</li>
 		<li>Designed and developed to help those users who have a hard time waking up in the morning. Once the user turns on the alarm at the time they need, the user must solve a picture puzzle to turn off the alarm.</li>
@@ -139,6 +139,8 @@
 
 	<li>I have been playing soccer both in competitive and non-competitive tournaments</li>
 	<li>I enjoy doing social works and volunteering at social events</li>
+
+<h2></h2>
 
 
 </body>
