--- a/CV.html
+++ b/CV.html
@@ -99,7 +99,7 @@
 	Bank ATM System</a> (May 2016 - August 2016)
 	<ul>
 		<li>An individual project in Computer Science course, in Java programming, where I created a program in eclipse IDE about an ATM machine system</li>
-		<li>This was about what generally an ATM machine can do. Adding money to cardholder’s balance or withdrawing money from the machine or maybe just checking the account balance</li>
+		<li>This was about what generally an ATM machine can do. Adding money to cardholderâ€™s balance or withdrawing money from the machine or maybe just checking the account balance</li>
 		<li>Extensive use of object oriented program, JAVA.</li>
 	</ul><a href ="https://github.com/safat661/StudyUnion">
 	Study Planning Application for Students</a> (Summer 2017(in progress))
@@ -108,12 +108,7 @@
 		<li>Design and developed an application where students can discuss course materials with other students in the class, ask questions about the course topic, show degree progress report, alert students about upcoming exams, assignment submission deadline and a to-do list</li>
 		<li>Integrated firebase for Cloud Messaging</li>
 	</ul><a href="https://github.com/safat661/PuzzleAlarmClock">
-	Puzzle Alarm Clock</a> (Fall 2017 (in progress))
-	<ul>	
-		<li>An individual project developed in Java, using the android studio as a programming environment</li>
-		<li>Designed and developed to help those users who have a hard time waking up in the morning. Once the user turns on the alarm at the time they need, the user must solve a picture puzzle to turn off the alarm.</li>
-
-	</ul>
+	
 
 
 <h2>Course Works</h2>
